fix(scroll): remove overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -205,12 +205,6 @@ html.lenis {
 
 html,
 body {
-  overscroll-behavior: none;
-  width: 100%;
-  height: 100%;
-  min-width: 100%;
-  min-height: 100%;
-  overflow: hidden;
   margin: 0px;
   height: auto;
   background-color: black;
